--- a/config.toml
+++ b/config.toml
@@ -3,7 +3,7 @@
 
 # The URL of your website.
 # End your URL with a `/` trailing slash, e.g. `https://example.com/`.
-baseurl = "https://agitated-wilson-0f2190.netlify.com/"
+baseurl = "http://www.jamieafflerbach.com/"
 
 # Title of your site
 title = "Jamie Afflerbach"
